# vendor-shield-1

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  supabase_schema.sql  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  evals.yml
.lovable/: plan.md
backend/: .env.example  README.md  auth.py  config.py  main.py  pyproject.toml  recompute_scores.py  reset_pinecone.py  seed.py  start.py
backend/chains/: assessment_graph.py
backend/evals/: __init__.py  golden_vendors.json  run_evals.py  test_judge.py
backend/mcp/: client.py  server.py
backend/models/: controls.py  schemas.py
backend/models/frameworks/: iso-27001.json  nist-800-53.json  soc2-tsc.json
backend/routers/: assessments.py  chat.py  controls.py  documents.py  email.py
backend/services/: aggregation.py  chat.py  chunking.py  email_service.py  embedding.py  evaluation.py  extraction.py  followup.py  framework_extraction.py  ingestion.py  llm.py  memory.py  pinecone_store.py  progress.py  retrieval.py  supabase_client.py  tracing.py  usage.py
backend/storage/: __init__.py  local_store.py  qdrant_store.py
backend/tests/: conftest.py  test_aggregation.py  test_api.py  test_auth_modes.py  test_chat_agent.py  test_controls.py  test_evals_gate.py  test_graph_routing.py  test_llm.py  test_memory.py  test_parsers.py  test_pdf.py  test_retrieval.py  test_retry_pass.py  test_schemas.py  test_security.py  test_tracing.py
docs/: CASE_STUDY.md  DEPLOY.md
src/: App.tsx  index.css  main.tsx
src/components/: ProtectedRoute.tsx  SendReportButton.tsx
src/components/assessment/: AssessmentPipeline.tsx  ChatPanel.tsx  ChecklistSection.tsx  CompareModal.tsx  DocsLinksSection.tsx  DomainScoresChart.tsx  FollowUpPanel.tsx  IndexingPipelineFlow.tsx  ReviewPanel.tsx  RiskBadge.tsx  RiskDonut.tsx  RunDiffPanel.tsx  RunHistoryPanel.tsx  ScoreGauge.tsx  Sparkline.tsx  SummaryModal.tsx  VendorTrendView.tsx
src/components/layout/: AppLayout.tsx  AppSidebar.tsx
src/components/ui/: loading-spinner.tsx  markdown-text.tsx
src/context/: AssessmentContext.tsx  AuthContext.tsx
src/data/: checklistSchema.ts  mockData.ts
src/hooks/: useChecklistSchema.ts
src/integrations/supabase/: types.ts
src/lib/: api.ts  mappers.test.ts  mappers.ts  reviewQueue.test.ts  reviewQueue.ts  runHistory.ts  scoring.ts  utils.test.ts  utils.ts
src/pages/: Architecture.tsx  AssessmentDetail.tsx  Assessments.tsx  Compare.tsx  Dashboard.tsx  Frameworks.tsx  Login.tsx  NewAssessment.tsx  Settings.tsx
src/types/: assessment.ts
supabase/: config.toml
supabase/functions/cleanup-assessment-assets/: index.ts
supabase/functions/mcp-server/: index.ts
supabase/functions/parse-document/: index.ts
supabase/functions/parse-url/: index.ts
supabase/functions/vendor-ai/: index.ts
supabase/migrations/: 20260312172124_1ff49b77-2681-438a-b99a-2ea7db10af52.sql  20260312172143_24cb4527-c41e-4d9d-beb2-35e8161f45e8.sql  20260313220101_720e6dd2-adae-4abc-af51-c5c0638d56f4.sql  20260313223207_a7e21005-4755-46bc-b711-8929559a5bd1.sql  20260313223223_bc8fb081-28b9-4e15-bf2a-6a32490e60c6.sql  20260315014725_2849a283-ce15-4c52-9a08-8a658b9ef3d4.sql  20260315053746_35953c57-079f-467f-b834-b83dfe8fbeb7.sql  20260315190738_83e3eb18-2858-4f8a-92d0-5fb924e65b24.sql  20260315195933_d0ca1923-9d5f-41af-99e2-813502d49044.sql  20260315205729_77d8a6c6-3ee6-45f4-9464-16942175213e.sql  20260315231726_60ba5bae-ffac-43f5-9a3b-ba6e8037e860.sql
