[project]
name = "vendorshield-backend"
version = "1.0.0"
description = "AI-powered vendor risk assessment system using LangChain, Groq, and Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "python-multipart",
    "sentence-transformers",
    "torch",
    "groq",
    "langchain>=0.3.0",
    "langchain-groq",
    "langchain-community",
    "langgraph",
    "pypdf",
    "beautifulsoup4",
    "httpx",
    "python-dotenv",
    "pydantic-settings",
    "python-docx",
    "mcp[cli]",
    "qdrant-client>=1.17.1",
    "resend>=2.29.0",
    "reportlab>=4.4.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
