[project]
name = "vendorshield-backend"
version = "1.0.0"
description = "AI-powered vendor risk assessment system using LangChain, OpenRouter, and Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "python-multipart",
    "sentence-transformers",
    "torch",
    # "groq",          # replaced by openrouter via openai SDK
    "openai",
    "langchain>=0.3.0",
    # "langchain-groq",  # replaced by openrouter via openai SDK
    "langchain-community",
    "langgraph",
    "pypdf",
    "beautifulsoup4",
    "httpx",
    "python-dotenv",
    "pydantic-settings",
    "python-docx",
    "mcp[cli]",
    "qdrant-client>=1.17.1",
    "resend>=2.29.0",
    "reportlab>=4.4.10",
    "PyJWT[crypto]>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make `from models.controls import ...` work from the backend/ rootdir
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't auto-discover packages - this is an application, not a library
py-modules = []
