[project]
name = "vendorshield-backend"
version = "1.0.0"
description = "AI-powered vendor risk assessment system using LangChain, OpenRouter, and Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "python-multipart",
    "sentence-transformers",
    "torch",
    # "groq",          # replaced by openrouter via openai SDK
    "openai",
    "langchain>=0.3.0",
    # "langchain-groq",  # replaced by openrouter via openai SDK
    "langchain-community",
    "langgraph",
    "pypdf",
    "beautifulsoup4",
    "httpx",
    "python-dotenv",
    "pydantic-settings",
    "python-docx",
    "mcp[cli]",
    "qdrant-client>=1.17.1",
    "resend>=2.29.0",
    "reportlab>=4.4.10",
    "PyJWT[crypto]>=2.8.0",
    # Optional-at-runtime LLM observability: tracing activates only when
    # LANGFUSE_* keys are set (see services/tracing.py); otherwise inert.
    "langfuse>=2.0",
]

# torch: CPU-only wheels.  On Linux (Docker), PyPI's default torch drags in
# ~5 GB of NVIDIA CUDA libraries that a CPU-only container never executes.
# The dedicated CPU index keeps the image and venv to what's actually used.
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]
# Judge-tier evals only (evals/test_judge.py) — heavy dependency tree,
# deliberately NOT in dev so per-PR CI and the Docker image skip it.
# Install with: uv sync --group eval
eval = [
    "deepeval>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make `from models.controls import ...` work from the backend/ rootdir
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Don't auto-discover packages - this is an application, not a library
py-modules = []
